# Linear-Regression-Solver

./: CMakeLists.txt  README.md  TODO.md
dep/GLAD/: CMakeLists.txt
dep/GLAD/include/: glad.c
dep/GLAD/include/glad/: glad.h
dep/IMGUI/: CMakeLists.txt  imgui.ini
dep/IMPLOT/: CMakelists.txt  imgui.ini  implot.h  implot_demo.cpp
dep/SimpleGL/: CMakeLists.txt
dep/SimpleGL/include/: BufferObject.hpp  SGLEngine.hpp  SGLRect.hpp  ShaderManager.hpp  ShaderProgram.hpp  Triangle.hpp  VertexArray.hpp
dep/SimpleGL/src/: BufferObject.cpp  SGLEngine.cpp  SGLRect.cpp  ShaderManager.cpp  ShaderProgram.cpp  Triangle.cpp  VertexArray.cpp
src/: CMakeLists.txt  DataManager.cpp  LinReg.cpp  LinReg.hpp  Regressor.cpp  WindowFuncs.cpp  WindowFuncs.hpp  imgui.ini  main.cpp
src/headers/: DataManager.hpp  LinReg.hpp  Regressor.h  WindowFuncs.hpp  imgui.ini
